fix alignment of items

--- a/client/src/pagesCSS/Projects.sass
+++ b/client/src/pagesCSS/Projects.sass
@@ -31,6 +31,8 @@ li
   flex-direction: row
   flex-wrap: wrap
   margin-right: $margin-large
+  justify-content: space-between;
+  align-items: center;
 
 @media screen and (min-width: 426px) and (max-width: 1024px)
   #projectsFont
